# photor

./: .gitignore  .iex.exs  Cargo.toml  README.md  TODO.md  db.sqlite  default.nix  exif_fujix.json  exif_ricoh_griiix.json  mix.exs  rust-toolchain  shell.nix
assets/css/: gallery.css
bash/: fast_checksum.sh
config/: dev.exs  runtime.exs  test.exs
html_templates/: index.html
lib/photor/: application.ex  utils.ex
lib/photor_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
liveview/: .gitignore  README.md  mix.exs  shell.nix
liveview/assets/: tailwind.config.js
liveview/config/: config.exs  dev.exs  prod.exs  runtime.exs
liveview/scripts/: try_release_server.sh
migrations/: 20230412200832_photos2.up.sql  20230416222815_create_hash_index.up.sql  20240808194341_partial_hash_sha256.up.sql  20240809195742_partial_sha256_hash_end.up.sql  20250214215332_inserted_at.up.sql  20250323212824_adds_archives.down.sql  20250323212824_adds_archives.up.sql
migrations/2023-04-07-075039_photos/: up.sql
migrations/2023-04-12-200832_photos2/: down.sql
migrations/2023-04-16-222815_create_hash_index/: down.sql
migrations/2023-05-13-224543_add_partial_hash/: down.sql
migrations/2023-05-16-182028_filename_and_directory/: up.sql
migrations/2023-05-20-190053_new_metadata/: up.sql
migrations/2023-05-21-213121_adds_create_date/: down.sql  up.sql
migrations/2023-08-22-181104_add_photos_create_day/: down.sql
photor-elixir/: .gitignore  .iex.exs  README.md  default.nix  mix.exs  shell.nix
photor-elixir/assets/: tailwind.config.js
photor-elixir/config/: config.exs  prod.exs  runtime.exs  test.exs
photor-elixir/lib/: photor_ui.ex  photor_ui_web.ex
photor-elixir/scripts/: make_release.sh
photor-elixir/test/: test_helper.exs
photor-rust/: default.nix  rust-toolchain.toml  shell.nix
photor-rust/bash/: partial_checksum.sh
scripts/: try_release_server.sh
sql_examples/: archive_size_bytes.sql  insert_archive.sql
src/: checksum.rs  database.rs  db.rs  files.rs  fuse.rs  fuse_photo_fs.rs  lib.rs  main.rs  main_clap.rs  models.rs  photoexif.rs  schema.rs  webserver.rs
test/: test_helper.exs
tests/: fuse_photo_fs_test.rs  fuse_test.rs  quick_dev.rs
tools/: rehash.lua
(+167 files in other folders)
