[package]
name = "photor"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
clap = { version = "4.2.1", features = ["derive"] }
diesel = { version = "2.0.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = "2.0.0"
dotenvy = "0.15.7"
env_logger = "0.10.0"
lazy_static = "1.4.0"
handlebars = "4.3.7"
log = "0.4.17"
murmur3 = "0.5.2"
regex = "1.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.31.0", features = ["full"] }
tower-http = { version = "0.4", features = ["fs"] }
walkdir = "2.3.3"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.5"
