[package]
name = "photor"
version = "0.5.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum = "0.6.20"
clap = { version = "4.2.1", features = ["derive"] }
dotenvy = "0.15.7"
env_logger = "0.10.0"
handlebars = "4.3.7"
lazy_static = "1.4.0"
log = "0.4.17"
murmur3 = "0.5.2"
regex = "1.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
sha2 = "=0.10.8"
sqlx = { version = "0.7.2", features = ["sqlite", "runtime-tokio-native-tls"] }
tera = "1"
tokio = { version = "1.31.0", features = ["full"] }
tower-http = { version = "0.4", features = ["fs"] }
walkdir = "2.3.3"

[dev-dependencies]
httpc-test = "0.1.5"
